# backend/src/nexus/schemas/workflows/v2/openapi.yaml
@@ -643,7 +643,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/WorkflowReadWithVersion'
+                $ref: '#/components/schemas/PublishWorkflowVersionResponse'
         '400':
           $ref: '../../base/shared-resources.openapi.yaml#/components/responses/BadRequestError'
         '401':
@@ -924,6 +924,9 @@ components:
 
     WorkflowReadWithVersion:
       $ref: ./shared-schemas.yaml#/components/schemas/WorkflowReadWithVersion
+
+    PublishWorkflowVersionResponse:
+      $ref: ./shared-schemas.yaml#/components/schemas/PublishWorkflowVersionResponse
 
     WorkflowVersionRead:
       type: object
